saving thing to local storage, navigate to break.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
 </head>
 <body>
     <div class="container">
-        <h1>Look at your vase and what you did to it</h1>
+        <h1>Title</h1>
         <img src="https://via.placeholder.com/300"/>
+        <form class="input-form" action="./break.html">
+            <label for="input">
+              <p>What will you break?</p>
+            </label>
+            <input type="text" id="userInput" name="userInput" value="" /><br />
+            <br />
+            <input class="submit-button" type="submit" onclick="storeThing()" value="save" /><br /><br />
+          </form>
     </div>
 </body>
 </html>
