--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </label>
             <input type="text" id="userInput" name="userInput" value="" /><br />
             <br />
-            <input class="submit-button" type="submit" onclick="storeThing()" value="save" /><br /><br />
+            <input class="submit-button" type="submit" onclick="store()" value="save" /><br /><br />
           </form>
     </div>
 </body>
