--- a/break.html
+++ b/break.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"></link>
+    <script src="localStorage.js"></script>
     <title>Document</title>
 </head>
 <body>
     <div class="container">
         <h1>Look at your vase and what you did to it</h1>
-        <img src="https://via.placeholder.com/300"/>
+        <img src="https://via.placeholder.com/300" onclick="breakThing()"/>
     </div>
 </body>
 </html>
