--- a/break.html
+++ b/break.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
     <div class="container">
-        <h1>Look at your vase and what you did to it</h1>
+        <h1>Look at your <span ls-value="userInput">vase</span> and what you did to it</h1>
         <img src="https://via.placeholder.com/300"/>
     </div>
+    <script>
+        document.querySelectorAll('[ls-value]').forEach(e => e.innerText = localStorage.getItem(e.getAttribute('ls-value')))
+    </script>
 </body>
 </html>
