--- a/break.html
+++ b/break.html
@@ -11,7 +11,15 @@
 <body>
     <div class="container">
         <h1>Look at your vase and what you did to it</h1>
-        <img src="https://via.placeholder.com/300" onclick="breakThing()"/>
+        <img class="img0" id="img0" src="https://via.placeholder.com/300" onclick="breakThing()"/>
+        <img class="img1" id="img1" src="https://via.placeholder.com/150" onclick="breakThing()"/>
+        <img class="img2" id="img2" src="https://via.placeholder.com/400" onclick="breakThing()"/>
+        <img class="img3" id="img3" src="https://via.placeholder.com/300" onclick="breakThing()"/>
+        <img class="img4" id="img4" src="https://via.placeholder.com/150" onclick="breakThing()"/>
+        <img class="img5" id="img5" src="https://via.placeholder.com/400" onclick="breakThing()"/>
+        <h1 class="end-title" id="end-title">RIP ITS BROKEN!!</h1>
+
     </div>
+    <script>checkCount()</script>
 </body>
 </html>
