--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <title>Vasebreaker</title>
     <link rel="stylesheet" href="style.css"></link>
     <script src="localStorage.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <div class="container">
-        <h1>Title</h1>
-        <img src="https://via.placeholder.com/300"/>
-        <form class="input-form" action="./break.html">
-            <label for="input">
-              <p>What will you break?</p>
-            </label>
-            <input type="text" id="userInput" name="userInput" value="" /><br />
-            <br />
-            <input class="submit-button" type="submit" onclick="store()" value="save" /><br /><br />
+<body class="flex flex-col items-center p-8">
+    <div class="flex flex-col gap-y-2">
+        <div class="flex flex-col self-center items-center relative w-56 h-56 border rounded-full pb-10 m-10">
+          <img class="h-full w-auto" src="vase.png" />
+          <p>Click to change</p>
+        </div>
+        <form class="input-form flex flex-col" action="./break.html">
+            <label class="text-lg font-bold" for="input">What will you break?</label>
+            <input class="border w-full peer h-16" type="text" id="userInput" name="userInput" value="" required/><br />
+            <input class="submit-button w-2/3 h-10 bg-black text-white self-center peer-invalid:bg-gray-300" type="submit" onclick="store()" value="Go" /><br /><br />
           </form>
     </div>
 </body>
