--- a/break.html
+++ b/break.html
@@ -13,12 +13,14 @@
     <div class="container">
         <h1>Look at your <span ls-value="userInput">vase</span> and what you did to it</h1>
     </div>        
-    <img class="img0" id="img0" src="https://via.placeholder.com/300" onclick="breakThing()"/>
-        <img class="img1" id="img1" src="https://via.placeholder.com/150" onclick="breakThing()"/>
-        <img class="img2" id="img2" src="https://via.placeholder.com/400" onclick="breakThing()"/>
-        <img class="img3" id="img3" src="https://via.placeholder.com/300" onclick="breakThing()"/>
-        <img class="img4" id="img4" src="https://via.placeholder.com/150" onclick="breakThing()"/>
-        <img class="img5" id="img5" src="https://via.placeholder.com/400" onclick="breakThing()"/>
+    <img class="img0" id="img0" src="./images/normal vase.png" width="200px" onclick="breakThing()"/>
+        <img class="img1" id="img1" src="./images/vase crack 1.png" width="200px" onclick="breakThing()"/>
+        <img class="img2" id="img2" src="./images/vase crack 2.png" width="200px" onclick="breakThing()"/>
+        <img class="img3" id="img3" src="./images/vase crack 3.png" width="200px" onclick="breakThing()"/>
+        <img class="img4" id="img4" src="./images/vase crack 4.png" width="200px" onclick="breakThing()"/>
+        <img class="img5" id="img5" src="./images/vase crack 5.png" width="200px" onclick="breakThing()"/>
+        <img class="img5" id="img5" src="./images/vase crack 6.png" width="200px" onclick="breakThing()"/>
+
       
         <form class="input-form" id="input-form">
         <label for="input">
