--- a/break.html
+++ b/break.html
@@ -14,12 +14,13 @@
     <div class="flex flex-col gap-y-2 w-96">
         <h1 class="text-4xl">Click on your <span ls-value="userInput">vase</span> then</h1>     
 
-        <img class="img0" id="img0" src="https://via.placeholder.com/300" onclick="breakThing()"/>
-        <img class="img1" id="img1" src="https://via.placeholder.com/150" onclick="breakThing()"/>
-        <img class="img2" id="img2" src="https://via.placeholder.com/400" onclick="breakThing()"/>
-        <img class="img3" id="img3" src="https://via.placeholder.com/300" onclick="breakThing()"/>
-        <img class="img4" id="img4" src="https://via.placeholder.com/150" onclick="breakThing()"/>
-        <img class="img5" id="img5" src="https://via.placeholder.com/400" onclick="breakThing()"/>
+        <img class="img0" id="img0" src="./vase.png" width="200px" onclick="breakThing()"/>
+        <img class="img1" id="img1" src="./images/vase crack 1.png" width="200px" onclick="breakThing()"/>
+        <img class="img2" id="img2" src="./images/vase crack 2.png" width="200px" onclick="breakThing()"/>
+        <img class="img3" id="img3" src="./images/vase crack 3.png" width="200px" onclick="breakThing()"/>
+        <img class="img4" id="img4" src="./images/vase crack 4.png" width="200px" onclick="breakThing()"/>
+        <img class="img5" id="img5" src="./images/vase crack 5.png" width="200px" onclick="breakThing()"/>
+        <img class="img6" id="img6" src="./images/vase crack 6.png" width="200px" onclick="breakThing()"/>
       
         <form class="input-form" id="input-form">
         <label for="input">
