--- a/break.html
+++ b/break.html
@@ -34,7 +34,7 @@
         <div class="end-title" id="end-title">
             <h1>RIP ITS BROKEN!!</h1>
             <div>
-                <img src="https://via.placeholder.com/300"/> <br>
+                <img src="./images/bunke.png"/> <br>
             </div>
             <a href="./graveyard.html">
                 <button >See memorial</button>
